feature/boot: Add service integration tests. Fix repository integration tests. Add delay generator for multithreading tests. Fix service method update getOwnerHousesByPersonRequest.